Closed Bug 1277426 Opened 8 years ago Closed 8 years ago

IonMonkey:MIPS: muliply arithmetic optimize with mul instruction

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: hwjeastd07, Assigned: hwjeastd07)

Details

Attachments

(1 file, 3 obsolete files)

User Agent: Mozilla/5.0 (Windows NT 10.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.102 Safari/537.36

Steps to reproduce:

1:patch -p1 <0001-replace-mul-replace-mult-and-mflo.patch
1:compile js engine on mips platform,such as loongson3A. 
2:run crypto.js benchmark.


Actual results:

Before patch:
    Score:  Crytpo: 1024

After patch:
    Score: Crypto: 1383
Component: Untriaged → JavaScript Engine: JIT
OS: Unspecified → Linux
Product: Firefox → Core
Hardware: Unspecified → Other
Attachment #8758984 - Attachment is obsolete: true
Attachment #8758990 - Attachment is obsolete: true
Attachment #8758990 - Flags: review?(r)
Attachment #8758992 - Flags: review?(branislav.rankov)
Comment on attachment 8758990 [details] [diff] [review]
0001-replace-mul-replace-mult-and-mflo.patch

Review of attachment 8758990 [details] [diff] [review]:
-----------------------------------------------------------------

Thank you.

You should generate patch based on mozilla-inbound. ;)
Attachment #8758990 - Flags: review?(r)
Attachment #8758992 - Attachment is obsolete: true
Attachment #8758992 - Flags: review?(branislav.rankov)
Comment on attachment 8759473 [details] [diff] [review]
0001-replace-mul-replace-mult-and-mflo.patch

Review of attachment 8759473 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good to me.
Attachment #8759473 - Flags: review+
Assignee: nobody → hwjeastd07
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by r@hev.cc:
https://hg.mozilla.org/integration/mozilla-inbound/rev/c2a7b4cefc6e
IonMonkey: MIPS: Replace mult/mflo by mul in MulI. r=hev
https://hg.mozilla.org/mozilla-central/rev/c2a7b4cefc6e
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: