Bug 1277426 - IonMonkey: MIPS: Replace mult/mflo by mul in MulI. r=hev

---
 js/src/jit/mips-shared/CodeGenerator-mips-shared.cpp  | 6 ++----
 js/src/jit/mips-shared/MacroAssembler-mips-shared.cpp | 7 +++++++
 js/src/jit/mips-shared/MacroAssembler-mips-shared.h   | 1 +
 3 files changed, 10 insertions(+), 4 deletions(-)